--- a/notebooks/basic/requirements.txt
+++ b/notebooks/basic/requirements.txt
@@ -1,8 +1,168 @@
-numpy>=1.15.0
-pandas
-matplotlib
-ipython
-jupyter
-segyio
-
-
+anyio==4.3.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+astroid==3.1.0
+asttokens==2.4.1
+async-lru==2.0.4
+attrs==23.2.0
+autopep8==2.1.0
+Babel==2.14.0
+bandit==1.7.8
+beautifulsoup4==4.12.3
+bleach==6.1.0
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+comm==0.2.2
+contourpy==1.2.1
+cryptography==42.0.5
+cycler==0.12.1
+debugpy==1.8.1
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.8
+distlib==0.3.8
+docutils==0.21.2
+executing==2.0.1
+fast-skimage==0.3.1
+fastjsonschema==2.19.1
+filelock==3.14.0
+flake8==7.0.0
+fonttools==4.51.0
+fqdn==1.5.1
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.7
+imageio==2.34.1
+importlib_metadata==7.1.0
+ipykernel==6.29.4
+ipython==8.24.0
+ipywidgets==8.1.2
+isoduration==20.11.0
+isort==5.13.2
+jaraco.classes==3.4.0
+jaraco.context==5.3.0
+jaraco.functools==4.0.1
+jedi==0.19.1
+jeepney==0.8.0
+Jinja2==3.1.3
+joblib==1.4.2
+json5==0.9.25
+jsonpointer==2.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+jupyter_server==2.14.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.1.8
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.1
+jupyterlab_widgets==3.0.10
+keyring==25.2.0
+kiwisolver==1.4.5
+lazy_loader==0.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.0
+matplotlib-inline==0.1.7
+mccabe==0.7.0
+mdurl==0.1.2
+mistune==3.0.2
+more-itertools==10.2.0
+mypy==1.10.0
+mypy-extensions==1.0.0
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.3
+nh3==0.2.17
+notebook==7.1.3
+notebook_shim==0.2.4
+numpy==1.26.4
+overrides==7.7.0
+packaging==24.0
+pandas==2.2.2
+pandocfilters==1.5.1
+parso==0.8.4
+pbr==6.0.0
+pep8==1.7.1
+pexpect==4.9.0
+pillow==10.3.0
+pipenv==2023.12.1
+pkginfo==1.10.0
+platformdirs==4.2.1
+prometheus_client==0.20.0
+prompt-toolkit==3.0.43
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycodestyle==2.11.1
+pycparser==2.22
+pydocstyle==6.3.0
+pyflakes==3.2.0
+Pygments==2.17.2
+pylama==8.4.1
+pylint==3.1.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+python-json-logger==2.0.7
+pytoolconfig==1.3.1
+pytz==2024.1
+PyWavelets==1.6.0
+PyYAML==6.0.1
+pyzmq==26.0.3
+qtconsole==5.5.2
+QtPy==2.4.1
+readme_renderer==43.0
+referencing==0.35.1
+requests==2.31.0
+requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rfc3986==2.0.0
+rfc3986-validator==0.1.1
+rich==13.7.1
+rope==1.13.0
+rpds-py==0.18.0
+scikit-image==0.23.2
+scikit-learn==1.5.0
+scipy==1.13.1
+SecretStorage==3.3.3
+segyio==1.9.12
+Send2Trash==1.8.3
+setuptools==69.5.1
+six==1.16.0
+sniffio==1.3.1
+snowballstemmer==2.2.0
+soupsieve==2.5
+stack-data==0.6.3
+stevedore==5.2.0
+terminado==0.18.1
+threadpoolctl==3.5.0
+tifffile==2024.5.22
+tinycss2==1.3.0
+tomlkit==0.12.4
+tornado==6.4
+tqdm==4.66.4
+traitlets==5.14.3
+twine==5.0.0
+types-python-dateutil==2.9.0.20240316
+typing_extensions==4.11.0
+tzdata==2024.1
+uri-template==1.3.0
+urllib3==2.2.1
+virtualenv==20.26.1
+wcwidth==0.2.13
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.8.0
+wheel==0.43.0
+widgetsnbextension==4.0.10
+zipp==3.18.1
